[package]
name = "check_hpe_oneview_alerts"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
http = "0.2.6"
reqwest = { version = "0.11.8", features = [ "blocking", "native-tls" ] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
simple-error = "0.2.3"

