[package]
name = "check_hpe_oneview_alerts"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
http = "0.2.7"
reqwest = { version = "0.11.10", features = [ "blocking", "native-tls" ] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
simple-error = "0.2.3"

